# stem-learning-note-agent

./: .gitignore  README.md  pyproject.toml
docs/: AGENT_ROLES.md  ARCHITECTURE.md  DATA_SCHEMAS.md  GUARDRAILS.md  HANDOFF_FINAL_REPORT.md  HANDOFF_TO_DEEPSEEK.md  INTERFACES.md  PROMPT_CONTRACTS.md  ROADMAP.md  TEST_PLAN.md  TOOL_CONTRACTS.md  WORKSPACE_SPEC.md  demo_report.md  resume_interview_pack.md
docs/prompts/: DEEPSEEK_START_PROMPT.md
docs/tasks/: 00_deepseek_task_index.md  01_workspace_and_schema.md  02_document_parser.md  03_formula_extractor.md  04_example_extractor_and_matcher.md  05_curriculum_mapper.md  06_prerequisite_graph.md  07_part_tutor.md  08_reviewer_and_fixer.md  (+6 more)
reports/: pdf_extraction_comparison.md
scripts/: evaluate_pdf_extractors.py
stem_learning_agent/: __init__.py  cli.py  main.py
tests/: conftest.py  test_cli_smoke.py  test_curriculum_mapper_pdf_fallback.py  test_curriculum_mapper_pdf_title_quality.py  test_deepseek_provider.py  test_example_extractor_real_llm.py  test_example_matching.py  test_extract_formulas.py  test_formula_extractor_real_llm.py  test_formula_garbling_guardrail.py  test_formula_unit_consistency.py  test_guardrails.py  test_material_parser_agent.py  test_orchestrator.py  test_packager_export.py  test_parse_document.py  test_part_tutor_real_llm.py  test_pdf_extraction_evaluation.py  test_prerequisite_generic_heuristic.py  test_prerequisite_real_llm.py  test_provider_factory.py  test_reviewer.py  test_reviewer_real_llm.py  test_schemas.py  test_tool_registry.py  test_visual_planner.py  test_workspace.py
(+60 files in other folders)
