[project]
name = "stem-learning-agent"
version = "0.1.0"
description = "A Claude-Code-like teaching harness that transforms STEM course materials into structured, explainable, reviewable learning notes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pypdf>=5.1.0",
    "python-pptx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
stem-agent = "stem_learning_agent.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stem_learning_agent*"]

[tool.setuptools.package-data]
stem_learning_agent = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
